# quimb-qaoa

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example_nae3sat.py  pyproject.toml  requirements.txt
examples/: example_genome.py  example_maxcut.py  example_nae3sat.py
qaoa_quimb/: circuit.py  contraction.py  decomp.py  gates.py  hamiltonian.py  initialization.py  launcher.py  mps.py  relabelling.py  utils.py
qaoa_quimb/__pycache__/: decomp._compute_number_svals_to_keep_numba-208.py310.1.nbc  decomp._compute_number_svals_to_keep_numba-208.py310.2.nbc  decomp._compute_number_svals_to_keep_numba-208.py310.nbi  decomp._compute_svals_renorm_factor_numba-242.py310.1.nbc  decomp._compute_svals_renorm_factor_numba-242.py310.2.nbc  decomp._compute_svals_renorm_factor_numba-242.py310.nbi  decomp._similarity_compress_eig_numba-734.py310.1.nbc  decomp._similarity_compress_eig_numba-734.py310.2.nbc  decomp._similarity_compress_eig_numba-734.py310.nbi  decomp._trim_and_renorm_svd_result_numba-259.py310.1.nbc  decomp._trim_and_renorm_svd_result_numba-259.py310.nbi  decomp.ldmul_numba-71.py310.1.nbc  decomp.ldmul_numba-71.py310.nbi  decomp.lq_stabilized_numba-650.py310.1.nbc  decomp.lq_stabilized_numba-650.py310.nbi  decomp.qr_stabilized_numba-615.py310.1.nbc  decomp.qr_stabilized_numba-615.py310.2.nbc  decomp.qr_stabilized_numba-615.py310.nbi  decomp.rdmul_numba-61.py310.1.nbc  decomp.rdmul_numba-61.py310.nbi  (+2 more)
quimb_qaoa/: __init__.py  circuit.py  contraction.py  decomp.py  hamiltonian.py  initialization.py  instantiation.py  launcher.py  mps.py  problem.py  utils.py
