[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qaoa_quimb"
version = "0.0.1"
authors = [
  { name="Julien Drapeau", email="julien.drapeau@usherbrooke.ca" },
]
description = "A QAOA implementation in Quimb."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/juliendrapeau/qaoa-quimb"