[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quimb_qaoa"
version = "0.1.0"
authors = [
  { name="Julien Drapeau", email="juliendrapeau707@gmail.com" },
]
description = "An optimized implementation of the Quantum Approximate Optimization Algorithm (QAOA) with Quimb."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/quicophy/quimb-qaoa"